Калькулятор гана жок Калганы дурыс

--- a/SqApp/Views/Home/Kurer.cshtml
+++ b/SqApp/Views/Home/Kurer.cshtml
@@ -6,32 +6,32 @@
         <div class="blocks">
             <div class="block1">
                 <a href="#!">
-                    <img src="http://ponyexpress.kz/images/root/serv1_hover.png" alt="">
+                    <img src="~/images/k1.png">
                     <h3>Рассчитать стоимость</h3>
                 </a>
                 <a href="#!">
-                    <img src="http://ponyexpress.kz/images/root/serv1_hover.png" alt="">
-                    <h3>Рассчитать стоимость</h3>
+                    <img src="~/images/k2.png">
+                    <h3>Вызвать курьера</h3>
                 </a>
                 <a href="#!">
-                    <img src="http://ponyexpress.kz/images/root/serv1_hover.png" alt="">
-                    <h3>Рассчитать стоимость</h3>
+                    <img src="~/images/k3.png">
+                    <h3>Отследить доставку</h3>
                 </a>
             </div>
             <div class="block2">
                 <a href="#!">
-                    <img src="http://ponyexpress.kz/images/root/serv1_hover.png" alt="">
-                    <h3>Рассчитать стоимость</h3>
+                    <img src="~/images/k4.png">
+                    <h3>Найти офис</h3>
                 </a>
                 <a href="#!">
-                    <img src="http://ponyexpress.kz/images/root/serv1_hover.png" alt="">
-                    <h3>Рассчитать стоимость</h3>
+                    <img src="~/images/k5.png">
+                    <h3>Заключить договор</h3>
                 </a>
             </div>
             <div class="block3">
                 <a href="#!">
-                    <img src="http://ponyexpress.kz/images/root/serv1_hover.png" alt="">
-                    <h3>Рассчитать стоимость</h3>
+                    <img src="~/images/k6.png">
+                    <h3>Обратная связь</h3>
                 </a>
             </div>
         </div>
@@ -51,27 +51,27 @@
     </div>
     <div class="sect2">
         <a href="#!">
-            <img src="http://ponyexpress.kz/images/root/f3.png" alt="">
+            <img src="~/images/k11.png">
             <h3>Доставка<br> ко времени </h3>
         </a>
         <a href="#!">
-            <img src="http://ponyexpress.kz/images/root/f3.png" alt="">
+            <img src="~/images/k22.png">
             <h3>Для интернет<br>магазинов</h3>
         </a>
         <a href="#!">
-            <img src="http://ponyexpress.kz/images/root/f3.png" alt="">
+            <img src="~/images/k33.png">
             <h3>Экспресс<br>доставка</h3>
         </a>
         <a href="#!">
-            <img src="http://ponyexpress.kz/images/root/f3.png" alt="">
+            <img src="~/images/k44.png">
             <h3>Международная<br> доставка</h3>
         </a>
         <a href="#!">
-            <img src="http://ponyexpress.kz/images/root/f3.png" alt="">
+            <img src="~/images/k55.png">
             <h3>Прямая<br> машина</h3>
         </a>
         <a href="#!">
-            <img src="http://ponyexpress.kz/images/root/f3.png" alt="">
+            <img src="~/images/k66.png">
             <h3>Получить<br> визу</h3>
         </a>
     </div>
