--- a/SqApp/Views/Home/Index.cshtml
+++ b/SqApp/Views/Home/Index.cshtml
@@ -146,10 +146,32 @@
                 <img src="~/images/f5.png" />
                 <p>ТВ, Аудио <br />Видео</p>
             </a>
-            <a href="~/Store/Shop">
+            <a href="~/Store/Shop" class="last">
                 <img src="~/images/f6.png" />
                 <p>Товары для дома и дачи</p>
             </a>
+            <div>
+                <a href="~/Store/Shop">
+                    <img src="~/images/f6.png" />
+                    <p>Товары для дома и дачи</p>
+                </a>
+                <a href="~/Store/Shop">
+                    <img src="~/images/f1.png" />
+                    <p>Телефоны, <br />Гаджеты</p>
+                </a>
+                <a href="~/Store/Shop">
+                    <img src="~/images/f2.png" />
+                    <p>Автотовары</p>
+                </a>
+                <a href="~/Store/Shop">
+                    <img src="~/images/f3.png" />
+                    <p>Украшения, <br />Аксессуары</p>
+                </a>
+                <a href="~/Store/Shop">
+                    <img src="~/images/f4.png" />
+                    <p>Компьютеры</p>
+                </a>
+            </div>
         </div>
     </div>
     <div class="sect4">
