--- a/SqApp/wwwroot/css/const.css
+++ b/SqApp/wwwroot/css/const.css
@@ -527,7 +527,7 @@ a.mob-down:hover, a.mob-down:hover > i{
 }
 
 .modal-window {
-    width: 90vw;
+    width: 70vw;
     height: 80vh;
     background-color: #fff;
     position: fixed;
@@ -538,7 +538,7 @@ a.mob-down:hover, a.mob-down:hover > i{
     align-items: center;
     margin: 0 auto;
     top: 70px;
-    left: 5vw;
+    left: 15vw;
     z-index: 12220;
 }
 .section{
@@ -558,27 +558,30 @@ a.mob-down:hover, a.mob-down:hover > i{
 .user-tovar {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 .user-tovar > .tovar{
-    width: 20%;
-    padding: 10px;
-    margin: 10px;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /*padding: 10px;*/
+    margin-bottom: 10px;
     border: 1px solid #CBD6E8;
 }
 .user-tovar .tov-img {
     display: block;
-    width: 100%;
-    padding: 10px;
-    border-bottom: 1px solid #CBD6E8;
+    width: 100px;
+    border-right: 1px solid #CBD6E8;
 }
 .user-tovar .tov-img > img {
     width: 100%;
 }
 .user-tovar a.tovar-name {
     display: block;
-    height: 35px;
-    margin: 10px 0;
+    margin: 10px;
     font-size: 14px;
     text-decoration: none;
 }
@@ -586,12 +589,13 @@ a.mob-down:hover, a.mob-down:hover > i{
     text-decoration: underline;
 }
 .user-tovar .price {
-    width: 100%;
+    width: auto;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .user-tovar .price > p {
-    width: 50%;
+    width: auto;
     font-size: 14px;
     color: #90A8D1;
     padding-left: 10px;
@@ -599,7 +603,22 @@ a.mob-down:hover, a.mob-down:hover > i{
 .user-tovar .price > p:first-child {
     border-right: 1px solid #90A8D1;
     padding-left: 0;
+    padding-right: 10px;
 }
+.user-tov-btns > a {
+    background-color: #118CE9;
+    color: #fff;
+    cursor: pointer;
+    text-decoration: none;
+    text-align: center;
+    padding: 10px 15px;
+    margin: 0 10px;
+    border-radius: 25px;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
+}
+
 .close {
     width: 20px;
     height: 20px;
@@ -765,8 +784,20 @@ a.mob-down:hover, a.mob-down:hover > i{
 		margin-right: 10px;
 		padding-right: 10px;
 	}
-    .user-tovar > .tovar{
+    /*.user-tovar > .tovar{
         width: 30%;
+    }*/
+    .user-tov-btns {
+        display: flex;
+        flex-direction: column;
+    }
+    .user-tov-btns > a {
+        padding: 5px 10px;
+        margin: 0 10px;
+        margin-top: 5px;
+    }
+    .user-tov-btns > a:last-child {
+        margin-bottom: 5px;
     }
     .right i {
         font-size: 20px;
@@ -808,14 +839,51 @@ a.mob-down:hover, a.mob-down:hover > i{
         width: auto;
         height: 25px;
     }
+
     .user-tovar {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: unset;
         justify-content: space-around;
-        padding: 15px 10px;
+        align-items: center;
+        padding: 15px 0;
         padding-bottom: 60px;
     }
-    .user-tovar > .tovar {
+    .user-tovar > .tovar{
         width: 45%;
         background-color: #fff;
+        display: block;
+        padding: 10px;
+        margin: 10px;
+        border: none;
+    }
+    .user-tovar .tov-img {
+        display: block;
+        width: 100%;
+        padding: 10px;
+        border: none;
+        border-bottom: 1px solid #CBD6E8;
+    }
+    .user-tovar .tov-img > img {
+        width: 100%;
+    }
+    .user-tovar a.tovar-name {
+        display: block;
+        height: 35px;
+        margin: 10px;
+        font-size: 14px;
+        text-decoration: none;
+    }
+    .user-tovar a.tovar-name:hover {
+        text-decoration: underline;
+    }
+    .user-tovar .price {
+        width: auto;
+        display: flex;
+        justify-content: center;
+    }
+    .user-tov-btns > a {
+        display: none;
     }
 	.fmidle{
 		margin-left: 5px;
@@ -867,7 +935,7 @@ a.mob-down:hover, a.mob-down:hover > i{
         border-left: 1px solid #90A8D1;
     }
     .user-tovar > .tovar:nth-child(odd){
-        border: none;
+        border-left: 1px solid #fff;
     }
 }
 @media  (max-width: 320px){
