--- a/SqApp/wwwroot/css/kurer.css
+++ b/SqApp/wwwroot/css/kurer.css
@@ -164,6 +164,9 @@
 	font-size: 50px;
 	margin-bottom: 20px;
 }
+.score-slider{
+    display: none;
+}
 .scores{
 	display: -webkit-flex;
 	display: -moz-flex;
@@ -323,6 +326,70 @@
 	color: #fff;
 }
 
+
+/*----------------CALC-FORM--------------------*/
+
+.calc-form{
+	width: 50%;
+	display: none;
+	-webkit-flex-wrap: wrap;
+	-moz-flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	-o-flex-wrap: wrap;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin: 0 auto;
+	margin-bottom: 30px;
+	padding: 15px;
+	border-top: 1px solid #168346;
+}
+.calc-form-act{
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+}
+.calc-form label{
+	width: 40%;
+	padding: 5px;
+	margin: 10px 20px;
+	color: #168346;
+	font-weight: bolder;
+}
+.calc-form select, .calc-form input{
+	width: 100%;	
+	padding: 5px;
+	color: #168346;
+}
+.calc-form > button{
+	padding: 10px 20px;
+	background-color: #C9DB2A;
+	color: #168346;
+	cursor: pointer;
+	text-transform: uppercase;
+	font-size: 14px;
+	font-weight: bold;
+	border-radius: 25px;
+	border: none;
+	-webkit-transition: 0.5s;
+	-o-transition: 0.5s;
+	transition: 0.5s;
+}
+.calc-form > button:focus{
+	outline: none;
+}
+.calc-form > button:hover{
+	background-color: #168346;
+	color: #fff;
+}
+.calc-form > p{
+	width: 100%;
+	padding: 15px;
+	color: #168346;
+	text-align: center;
+	display: none;
+}
 /*----------------SECT5--------------------*/
 .sect5{
 	width: 100%;
@@ -488,6 +555,9 @@
 	.sect4{
 		margin-bottom: 50px;
 	}
+    .calc-form {
+        width: 70%;
+    }
 	.sect5{
 		padding: 40px 10%;
 	}
@@ -560,6 +630,9 @@
 	.sect4-items p{
 		width: 120px;
 	}
+    .calc-form {
+        width: 80%;
+    }
 	.more{
 		padding: 10px;
 		font-size: 12px;
@@ -617,6 +690,14 @@
 		-o-transition: 0.3s;
 		transition: 0.3s;
 	}
+	.blocks a > h3{
+		width: 100%;
+		margin: 0 10px;
+		display: none;
+	}
+    .blocks a:hover > h3{
+        display: block;
+    }
 	.blocks a:hover{
 		width: 100%;
 		-webkit-transition: 0.1s;
@@ -627,11 +708,6 @@
 		width: 30px;
 		height: 30px;
 		margin: 0;
-	}
-	.blocks a > h3{
-		width: 100%;
-		margin: 0 10px;
-		/*display: none;*/
 	}
 	.sect2{
 		-webkit-flex-wrap: wrap;
@@ -648,27 +724,41 @@
 	}
 	.sect2 > a > img{
 		width: 30px;
+		height: 30px;
 	}
 	.sect2 > a > h3{
 		font-size: 12px;
 	}
-
-	.sect3 > h3{
-		width: 70%;
-		font-size: 24px;
-	}
+    .sect3{
+        margin-bottom: 0;
+    }
+    .sect3 > h3 {
+        width: 70%;
+        font-size: 24px;
+    }
+    .sect3 > .scores{
+        display: none;
+    }
+    .score-slider {
+        display: block;
+    }
 	.score{
-		height: 90px;
+        text-align: center;
+        margin: 0;
 	}
+    .score::before{
+        display: none;
+    }
 	.score > p{
-		font-size: 30px;
+        padding: 0 !important;
+		font-size: 75px;
 	}
 	.score-text{
-		font-size: 12px;
+		font-size: 20px;
 	}
 	.sect3-bottom{
 		padding: 0 10%;
-		margin-top: 40px;
+		margin-top: -200px;
 	}
 	.lists{
 		-webkit-flex-direction: column;
@@ -686,7 +776,7 @@
 		margin-top: 0;
 	}
 	.sect4{
-		margin-top: 350px;
+		margin-top: 200px;
 		-webkit-flex-direction: column;
 		-moz-flex-direction: column;
 		-ms-flex-direction: column;
@@ -719,6 +809,12 @@
 		left: -40px;
 		font-size: 50px;
 		font-weight: bolder;
+	}
+    .calc-form{
+		width: 100%;
+	}
+	.calc-form label{
+		margin: 10px;
 	}
 	.sect5{
 		padding: 30px 5%;
@@ -753,17 +849,21 @@
 	.sect5-cont > a{
 		width: 100%;
 		margin-bottom: 25px;
-		text-decoration: underline;
 	}
 	.sect5-cont > a > p{
 		margin-bottom: 10px;
 	}
 }
 @media  (max-width: 375px){
-	.sect3-bottom{
-		margin-top: 20px;
-	}
-
+    .sect3-bottom {
+        height: 65%;
+    }
+    .sect4 {
+        margin-top: 230px;
+    }
+    .sect3 > h3 {
+        width: auto;
+    }
 }
 @media  (max-width: 320px){
 	.sect3-bottom{
@@ -775,14 +875,10 @@
 		width: 100%;
 	}
 	.score{
-		margin: 0 20px;
 		height: 75px;
 	}
 	.score > p{
-		font-size: 24px;
-	}
-	.sect4{
-		margin-top: 320px;
+		/*font-size: 24px;*/
 	}
 	.sect4 > h3{
 		font-size: 20px;
